--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -1,24 +1,27 @@
 .divFormat{
-    border-radius: 2px;
-    border-color: black;
-    font: 12pt Arial;
-    border-width: 2px;
-    width: 350px;
-    height: 450px;
-    flex-wrap: wrap;
-    text-align: center;
-    margin: 0 auto;
+  border-radius: 2px;
+  border-color: black;
+  font: 12pt Arial;
+  border-width: 2px;
+  width: 350px;
+  height: 450px;
+  flex-wrap: wrap;
+  text-align: center;
+  margin: 0 auto;
+  
 } 
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    background-color: rgb(174, 165, 165);
-    
-  }
-  .borda{
-    border-width: 10px;
-    border-style: solid; 
-    border-color:  rgb(9, 85, 23); 
-  }
- 
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  background-color:rgba(0, 0, 0, 0.689);
+  
+}
+.borda{
+  border-width: 10px;
+  border-style: solid; 
+  border-color:  rgb(38, 29, 176); 
+}
+.txt{
+  color: black;
+}
